package hu.mostoha.mobile.kmp.huki.util

object TestTags {
    const val MAIN_FAB_MY_LOCATION_BUTTON = "MAIN_FAB_MY_LOCATION_BUTTON"
    const val MAIN_FAB_DISCOVER_BUTTON = "MAIN_FAB_DISCOVER_BUTTON"
    const val MAIN_FAB_GPX_CONTROL_BUTTON = "MAIN_FAB_GPX_CONTROL_BUTTON"
    const val MAIN_FAB_GPX_TOGGLE_LINE_BUTTON = "MAIN_FAB_GPX_TOGGLE_LINE_BUTTON"
    const val MAIN_FAB_GPX_TOGGLE_DISTANCES_BUTTON = "MAIN_FAB_GPX_TOGGLE_DISTANCES_BUTTON"
    const val MAIN_FAB_GPX_OVERVIEW_BUTTON = "MAIN_FAB_GPX_OVERVIEW_BUTTON"
    const val MAIN_FAB_GPX_CLEAR_BUTTON = "MAIN_FAB_GPX_CLEAR_BUTTON"
    const val MAIN_FAB_ZOOM_IN_BUTTON = "MAIN_FAB_ZOOM_IN_BUTTON"
    const val MAIN_FAB_ZOOM_OUT_BUTTON = "MAIN_FAB_ZOOM_OUT_BUTTON"
    const val MAIN_SCALE_BAR = "MAIN_SCALE_BAR"
    const val MAIN_SEARCH_BAR = "MAIN_SEARCH_BAR"

    const val MAP_MAPBOX = "MAP_MAPBOX"
    const val MAP_DEBUG_CAMERA_PANEL = "MAP_DEBUG_CAMERA_PANEL"
    const val MAP_DISTANCE_INFO_WINDOW = "MAP_DISTANCE_INFO_WINDOW"

    const val MENU_BACK_BUTTON = "MENU_BACK_BUTTON"
    const val MENU_SCREEN_ROOT = "MENU_SCREEN_ROOT"
    const val MENU_APP_ICON = "MENU_APP_ICON"
    const val MENU_VERSION = "MENU_VERSION"
    const val MENU_ROW_DISCOVER = "MENU_ROW_DISCOVER"
    const val MENU_ROW_DESTINATIONS = "MENU_ROW_DESTINATIONS"
    const val MENU_ROW_PLACE_HISTORY = "MENU_ROW_PLACE_HISTORY"
    const val MENU_ROW_GPX_COLLECTION = "MENU_ROW_GPX_COLLECTION"
    const val MENU_ROW_GPX_GUIDE = "MENU_ROW_GPX_GUIDE"
    const val MENU_ROW_TRAIL_SYMBOLS_GUIDE = "MENU_ROW_TRAIL_SYMBOLS_GUIDE"
    const val MENU_ROW_EMAIL = "MENU_ROW_EMAIL"
    const val MENU_ROW_PRIVACY_POLICY = "MENU_ROW_PRIVACY_POLICY"
    const val MENU_ROW_FACEBOOK = "MENU_ROW_FACEBOOK"
    const val MENU_ROW_GITHUB = "MENU_ROW_GITHUB"
    const val MENU_ROW_LOCATION_IQ = "MENU_ROW_LOCATION_IQ"
    const val MENU_ROW_SETTINGS = "MENU_ROW_SETTINGS"
    const val MENU_ROW_ROUTE_PLANNER = "MENU_ROW_ROUTE_PLANNER"

    const val WHATS_NEW_SHEET = "WHATS_NEW_SHEET"
    const val WHATS_NEW_CLOSE_BUTTON = "WHATS_NEW_CLOSE_BUTTON"
    const val WHATS_NEW_RELEASE_NOTES = "WHATS_NEW_RELEASE_NOTES"
    const val WHATS_NEW_MESSAGE_CARD = "WHATS_NEW_MESSAGE_CARD"

    const val SETTINGS_SCREEN_ROOT = "SETTINGS_SCREEN_ROOT"
    const val SETTINGS_BACK_BUTTON = "SETTINGS_BACK_BUTTON"
    const val SETTINGS_ZOOM_CONTROLS_TOGGLE = "SETTINGS_ZOOM_CONTROLS_TOGGLE"
    const val SETTINGS_THEME_PICKER = "SETTINGS_THEME_PICKER"

    const val SEARCH_RESULT_ITEM = "SEARCH_RESULT_ITEM"
    const val SEARCH_ONLINE_SECTION = "SEARCH_ONLINE_SECTION"

    const val RECENT_GPX_SECTION = "RECENT_GPX_SECTION"
    const val RECENT_GPX_ITEM = "RECENT_GPX_ITEM"
    const val RECENT_GPX_SEE_ALL_BUTTON = "RECENT_GPX_SEE_ALL_BUTTON"

    const val RECENT_PLACES_SECTION = "RECENT_PLACES_SECTION"
    const val RECENT_PLACES_ITEM = "RECENT_PLACES_ITEM"
    const val RECENT_PLACES_SEE_ALL_BUTTON = "RECENT_PLACES_SEE_ALL_BUTTON"

    const val DESTINATIONS_SECTION = "DESTINATIONS_SECTION"
    const val DESTINATIONS_SEE_ALL_BUTTON = "DESTINATIONS_SEE_ALL_BUTTON"
    const val DESTINATION_CARD = "DESTINATION_CARD"
    const val DESTINATION_EXPAND_BUTTON = "DESTINATION_EXPAND_BUTTON"

    const val GPX_COLLECTION_SCREEN_ROOT = "GPX_COLLECTION_SCREEN_ROOT"
    const val GPX_COLLECTION_BACK_BUTTON = "GPX_COLLECTION_BACK_BUTTON"
    const val GPX_COLLECTION_HELP_BUTTON = "GPX_COLLECTION_HELP_BUTTON"
    const val GPX_COLLECTION_LIST = "GPX_COLLECTION_LIST"
    const val GPX_COLLECTION_EMPTY_VIEW = "GPX_COLLECTION_EMPTY_VIEW"
    const val GPX_COLLECTION_ITEM = "GPX_COLLECTION_ITEM"
    const val GPX_COLLECTION_ITEM_OPTIONS_BUTTON = "GPX_COLLECTION_ITEM_OPTIONS_BUTTON"
    const val GPX_COLLECTION_ITEM_DELETE_BUTTON = "GPX_COLLECTION_ITEM_DELETE_BUTTON"
    const val GPX_COLLECTION_DELETE_DIALOG_CONFIRM_BUTTON = "GPX_COLLECTION_DELETE_DIALOG_CONFIRM_BUTTON"

    const val GPX_GUIDE_SCREEN_ROOT = "GPX_GUIDE_SCREEN_ROOT"
    const val GPX_GUIDE_BACK_BUTTON = "GPX_GUIDE_BACK_BUTTON"

    const val TRAIL_SYMBOLS_GUIDE_SCREEN_ROOT = "TRAIL_SYMBOLS_GUIDE_SCREEN_ROOT"
    const val TRAIL_SYMBOLS_GUIDE_BACK_BUTTON = "TRAIL_SYMBOLS_GUIDE_BACK_BUTTON"

    const val LOCATION_IQ_SCREEN_ROOT = "LOCATION_IQ_SCREEN_ROOT"
    const val LOCATION_IQ_BACK_BUTTON = "LOCATION_IQ_BACK_BUTTON"
    const val LOCATION_IQ_VISIT_WEBSITE = "LOCATION_IQ_VISIT_WEBSITE"

    const val GPX_DETAILS_TITLE = "GPX_DETAILS_TITLE"
    const val GPX_DETAILS_CLOSE_BUTTON = "GPX_DETAILS_CLOSE_BUTTON"
    const val GPX_DETAILS_START_BUTTON = "GPX_DETAILS_START_BUTTON"
    const val GPX_DETAILS_NAV_START_BUTTON = "GPX_DETAILS_NAV_START_BUTTON"
    const val GPX_DETAILS_NAV_END_BUTTON = "GPX_DETAILS_NAV_END_BUTTON"
    const val GPX_DETAILS_SHARE_BUTTON = "GPX_DETAILS_SHARE_BUTTON"

    const val PLACE_DETAILS_SHEET = "PLACE_DETAILS_SHEET"
    const val PLACE_DETAILS_TITLE = "PLACE_DETAILS_TITLE"
    const val PLACE_DETAILS_ADDRESS = "PLACE_DETAILS_ADDRESS"
    const val PLACE_DETAILS_DISTANCE = "PLACE_DETAILS_DISTANCE"
    const val PLACE_DETAILS_LOADING = "PLACE_DETAILS_LOADING"
    const val PLACE_DETAILS_CLOSE_BUTTON = "PLACE_DETAILS_CLOSE_BUTTON"
    const val PLACE_DETAILS_ROUTE_PLAN_BUTTON = "PLACE_DETAILS_ROUTE_PLAN_BUTTON"
    const val PLACE_DETAILS_MAPS_NAVIGATION_BUTTON = "PLACE_DETAILS_MAPS_NAVIGATION_BUTTON"

    const val ROUTE_PLANNER_SHEET = "ROUTE_PLANNER_SHEET"
    const val ROUTE_PLANNER_TITLE = "ROUTE_PLANNER_TITLE"
    const val ROUTE_PLANNER_CLOSE_BUTTON = "ROUTE_PLANNER_CLOSE_BUTTON"
    const val ROUTE_PLANNER_PROFILE_PICKER = "ROUTE_PLANNER_PROFILE_PICKER"
    const val ROUTE_PLANNER_WAYPOINT_LIST = "ROUTE_PLANNER_WAYPOINT_LIST"
    const val ROUTE_PLANNER_MORE_STOPS_ROW = "ROUTE_PLANNER_MORE_STOPS_ROW"
    const val ROUTE_PLANNER_DELETE_STOP_BUTTON = "ROUTE_PLANNER_DELETE_STOP_BUTTON"
    const val ROUTE_PLANNER_ADD_STOP_ROW = "ROUTE_PLANNER_ADD_STOP_ROW"
    const val ROUTE_PLANNER_MAX_STOPS_ROW = "ROUTE_PLANNER_MAX_STOPS_ROW"
    const val ROUTE_PLANNER_EMPTY_STOP_ROW = "ROUTE_PLANNER_EMPTY_STOP_ROW"
    const val ROUTE_PLANNER_ROUND_TRIP_BUTTON = "ROUTE_PLANNER_ROUND_TRIP_BUTTON"
    const val ROUTE_PLANNER_SEARCH_SCREEN = "ROUTE_PLANNER_SEARCH_SCREEN"
    const val ROUTE_PLANNER_SEARCH_CLOSE_BUTTON = "ROUTE_PLANNER_SEARCH_CLOSE_BUTTON"
    const val ROUTE_PLANNER_SEARCH_FIELD = "ROUTE_PLANNER_SEARCH_FIELD"
    const val ROUTE_PLANNER_SEARCH_MY_LOCATION_BUTTON = "ROUTE_PLANNER_SEARCH_MY_LOCATION_BUTTON"
    const val ROUTE_PLANNER_SEARCH_PICK_ON_MAP_BUTTON = "ROUTE_PLANNER_SEARCH_PICK_ON_MAP_BUTTON"
    const val ROUTE_PLANNER_SAVE_BUTTON = "ROUTE_PLANNER_SAVE_BUTTON"
    const val ROUTE_PLANNER_STATS = "ROUTE_PLANNER_STATS"
    const val ROUTE_PLANNER_LOADING = "ROUTE_PLANNER_LOADING"
    const val ROUTE_PLANNER_ERROR = "ROUTE_PLANNER_ERROR"

    const val DISCOVER_SHEET = "DISCOVER_SHEET"
    const val DISCOVER_CLOSE_BUTTON = "DISCOVER_CLOSE_BUTTON"
    const val DISCOVER_HIKE_RECOMMENDATIONS_SECTION = "DISCOVER_HIKE_RECOMMENDATIONS_SECTION"
    const val DISCOVER_HIKE_RECOMMENDATIONS_INFO_BUTTON = "DISCOVER_HIKE_RECOMMENDATIONS_INFO_BUTTON"
    const val DISCOVER_HIKE_RECOMMENDATIONS_INFO_TOOLTIP = "DISCOVER_HIKE_RECOMMENDATIONS_INFO_TOOLTIP"
    const val DISCOVER_HIKE_RECOMMENDATIONS_GPX_GUIDE_BUTTON = "DISCOVER_HIKE_RECOMMENDATIONS_GPX_GUIDE_BUTTON"
    const val DISCOVER_BROWSE_DESTINATIONS_BUTTON = "DISCOVER_BROWSE_DESTINATIONS_BUTTON"
    const val DISCOVER_OKT_SECTION = "DISCOVER_OKT_SECTION"
    const val DISCOVER_OKT_INFO_BUTTON = "DISCOVER_OKT_INFO_BUTTON"
    const val DISCOVER_OKT_CARD = "DISCOVER_OKT_CARD"

    const val OKT_SHEET = "OKT_SHEET"
    const val OKT_CLOSE_BUTTON = "OKT_CLOSE_BUTTON"
    const val OKT_START_BUTTON = "OKT_START_BUTTON"
    const val OKT_SECTION_ROW = "OKT_SECTION_ROW"
    const val OKT_SECTION_MENU = "OKT_SECTION_MENU"
    const val OKT_SECTION_REVERSE = "OKT_SECTION_REVERSE"
    const val OKT_STAMP_CARD = "OKT_STAMP_CARD"
    const val OKT_INFO_WINDOW = "OKT_INFO_WINDOW"
    const val OKT_INFO_WINDOW_PLACE_DETAILS_BUTTON = "OKT_INFO_WINDOW_PLACE_DETAILS_BUTTON"
    const val OKT_RESUME_FAB = "OKT_RESUME_FAB"
    const val HIKE_RECOMMENDATION_CARD = "HIKE_RECOMMENDATION_CARD"

    const val DESTINATIONS_SCREEN_ROOT = "DESTINATIONS_SCREEN_ROOT"
    const val DESTINATIONS_BACK_BUTTON = "DESTINATIONS_BACK_BUTTON"
    const val DESTINATIONS_TAB_BAR = "DESTINATIONS_TAB_BAR"
    const val DESTINATIONS_LIST = "DESTINATIONS_LIST"
    const val DESTINATIONS_ITEM = "DESTINATIONS_ITEM"
    const val DESTINATIONS_NEARBY_PERMISSION_VIEW = "DESTINATIONS_NEARBY_PERMISSION_VIEW"
    const val DESTINATIONS_NEARBY_ERROR_VIEW = "DESTINATIONS_NEARBY_ERROR_VIEW"
    const val DESTINATION_PREVIEW = "DESTINATION_PREVIEW"
    const val DESTINATION_PREVIEW_BACKDROP = "DESTINATION_PREVIEW_BACKDROP"
    const val DESTINATION_PREVIEW_SHOW_ON_MAP_BUTTON = "DESTINATION_PREVIEW_SHOW_ON_MAP_BUTTON"

    const val PLACE_HISTORY_SCREEN_ROOT = "PLACE_HISTORY_SCREEN_ROOT"
    const val PLACE_HISTORY_BACK_BUTTON = "PLACE_HISTORY_BACK_BUTTON"
    const val PLACE_HISTORY_LIST = "PLACE_HISTORY_LIST"
    const val PLACE_HISTORY_EMPTY_VIEW = "PLACE_HISTORY_EMPTY_VIEW"
    const val PLACE_HISTORY_ITEM = "PLACE_HISTORY_ITEM"

    fun routePlannerEmptyStopRow(index: Int) = "${ROUTE_PLANNER_EMPTY_STOP_ROW}_$index"
}
