...
/**
 * Main landscapes of Hungary, focusing on the hiking related areas.
 *
 * It is a hardcoded data, coming from the Overpass query:
 * tools/osm/landscapes_overpass_query.txt
 */
val Landscapes = listOf(
    Landscape(
        osmId = "279573777",
        osmType = OsmType.WAY,
        nameRes = SharedRes.strings.landscape_bukk,
        landscapeType = LandscapeType.MOUNTAIN_HIGH,
        center = Location(48.0356833, 20.5239573),
...
