...
}

private val previewDestinations = listOf(
    Destination(
        osmId = "1",
        name = "Dobogókő",
        town = "Pilisszentkereszt",
        type = DestinationType.PEAK,
        location = Location(47.7181, 18.8948),
        description = SharedRes.strings.destinations_section_title,
        popularity = 10,
    ),
    Destination(
...
